fix some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -1063,7 +1063,7 @@ Page layout for articles on Start Here
       margin-top: 1rem;
       margin-bottom: 1rem;
       padding: 1.2rem 0;
-      line-height: 1.6;
+      line-height: 1.4;
       font-size: 1.4rem; }
       @media only screen and (min-width: 900px) {
         .article .article__section--content {
@@ -1679,7 +1679,7 @@ header {
   background-attachment: fixed;
   margin: 0;
   width: 100%;
-  height: 70vh;
+  min-height: 70vh;
   grid-column: 1 / 3;
   grid-row: 1/ 3;
   display: flex;
@@ -1883,12 +1883,12 @@ header {
       display: none; }
       .menu__hamburger--list-item {
         margin: 1rem auto;
-        padding: 1rem; }
+        padding: .5rem; }
         .menu__hamburger--list-item a {
           display: inline-block;
           margin: 0 auto;
           width: 100%;
-          padding: 1.4rem 1rem;
+          padding: 1rem;
           color: #fcfcfc;
           text-align: center;
           transition: all 0.3s ease-in-out;
@@ -1905,7 +1905,7 @@ header {
       margin-right: -1rem; }
       @media only screen and (min-width: 580px) {
         .menu__hamburger--toggle:checked ~ .menu__hamburger--list {
-          margin-right: -8rem;
+          margin-right: -5rem;
           width: 107vw; } }
 
 .fixedNav {
