--- a/sass/04layout/_article.scss
+++ b/sass/04layout/_article.scss
@@ -207,7 +207,7 @@ Page layout for articles on Start Here
       margin-top: 1rem;
       margin-bottom: 1rem;
       padding: 1.2rem 0;
-      line-height: 1.6;
+      line-height: 1.4;
       font-size: $font-size-xs;
 
       @include responsive(sm-desktop) {
