--- a/sass/04layout/_header.scss
+++ b/sass/04layout/_header.scss
@@ -24,7 +24,7 @@ header {
 
   margin: 0;
   width: 100%;
-  height: 70vh;
+  min-height: 70vh;
 
   grid-column: 1 / 3;
   grid-row: 1/ 3;
@@ -295,14 +295,14 @@ header {
 
       &-item {
         margin: 1rem auto;
-        padding: 1rem;
+        padding: .5rem;
 
         & a {
           display: inline-block;
           margin: 0 auto;
           width: 100%;
           // height: 100%;
-          padding: 1.4rem 1rem;
+          padding: 1rem;
           color: $color-white;
 
           text-align: center;
@@ -329,7 +329,7 @@ header {
       margin-right: -1rem;
 
       @include responsive(tab) {
-        margin-right: -8rem;
+        margin-right: -5rem;
         width: 107vw;
       }
     }
